objects/LAT_RegionalSupervisor__c.object
<CustomObject>
    <fields>
        <fullName>AssistenteRegional__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assistente Regional</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supervisores1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_RegionalClientOnPremise__c</fullName>
        <label>Regional Cliente On Premise</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LAT_RegionalClientOnPremise</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsável</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supervisores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkflowType__c</fullName>
        <label>Tipo Workflow</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>Regional-Supervisor</label>
    <listViews>
        <fullName>Supervisores_Regional_POP</fullName>
        <columns>NAME</columns>
        <columns>Supervisor__c</columns>
        <columns>LAT_RegionalClientOnPremise__c</columns>
        <columns>AssistenteRegional__c</columns>
        <columns>WorkflowType__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Supervisores Regional POP</label>
        <language>pt_BR</language>
    </listViews>
    <nameField>
        <label>Regional POP</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supervisores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>